--- a/Loans proyect with Keras.ipynb
+++ b/Loans proyect with Keras.ipynb
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../DATA/lending_club_loan_two.csv')"
+    "df = pd.read_csv('lending_club_loan_two.csv')"
    ]
   },
   {
